--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,7 @@
     --card-foreground: oklch(0.145 0 0);
     --popover: oklch(1 0 0);
     --popover-foreground: oklch(0.145 0 0);
-    --primary: oklch(0.205 0 0);
+    --primary: #58565b;
     --primary-foreground: oklch(0.985 0 0);
     --secondary: oklch(0.97 0 0);
     --secondary-foreground: oklch(0.205 0 0);
@@ -39,6 +39,8 @@
     --background: oklch(1 0 0);
     --foreground: oklch(0.145 0 0);
     --header-split: #31331c;
+    --logo-orange: #f3661a;
+    --logo-gray: #58565b;
 }
 
 .dark {
@@ -46,7 +48,7 @@
     --card-foreground: oklch(0.145 0 0);
     --popover: oklch(1 0 0);
     --popover-foreground: oklch(0.145 0 0);
-    --primary: oklch(0.205 0 0);
+    --primary: #58565b;
     --primary-foreground: oklch(0.985 0 0);
     --secondary: oklch(0.97 0 0);
     --secondary-foreground: oklch(0.205 0 0);
